--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -33,6 +33,7 @@ add_plugin(NAME hyriseTestPlugin SRCS test_plugin.cpp test_plugin.hpp)
 add_plugin(NAME hyriseTestNonInstantiablePlugin SRCS non_instantiable_plugin.cpp)
 add_plugin(NAME hyriseSharedDictionariesPlugin SRCS
         shared_dictionaries_plugin/shared_dictionaries_plugin.cpp shared_dictionaries_plugin/shared_dictionaries_plugin.hpp
+        shared_dictionaries_plugin/shared_dictionaries_plugin_settings.cpp shared_dictionaries_plugin/shared_dictionaries_plugin_settings.hpp
         shared_dictionaries_plugin/shared_dictionaries_column_processor.cpp shared_dictionaries_plugin/shared_dictionaries_column_processor.hpp)
 
 
